einstellung_derive/src/trybuild_tests/invalid_merge_subconfig.stderr
error: Unknown value: `subconfig`. Available values: `extend`, `function`, `replace`
 --> src/trybuild_tests/invalid_merge_subconfig.rs
  |
  |     #[config(merge = "subconfig")]
  |                      ^^^^^^^^^^^
